--- a/fonts/anonymous-pro/PKGBUILD
+++ b/fonts/anonymous-pro/PKGBUILD
@@ -1,18 +1,18 @@
 # $Id$
 # Maintainer: Michael Johnson <michaelpjohnson@gmail.com>
 
-pkgname=anonymoud-pro-fonts
-pkgver=1.002
-_relver=1.002
+pkgname=anonymous-pro-fonts
+pkgver=1.0.0
+_relver=1.0.0
 pkgrel=1
 pkgdesc="Anonymous Pro (2009) is a family of four fixed-width fonts designed with coding in mind."
 url="http://www.marksimonson.com/fonts/view/anonymous-pro"
 arch=(any)
 license=(custom)
-_tarname=AnonymousPro-$_relver
-_dirname=AnonymousPro-$_relver.001
-source=("$_tarname.zip::http://www.marksimonson.com/assets/content/fonts/AnonymousPro-$_relver.zip")
-sha256sums=('86665847a51cdfb58a1e1dfd8b1ba33f183485affe50b53e3304f63d3d3552ab')
+_tarname=AnonymousPro
+_dirname=AnonymousPro
+source=("$_tarname.zip::https://mpjcode.com/fonts/$_tarname-$_relver.zip")
+sha256sums=('bdd89c6738ccabeab5efcf8d5fc4ca850374a3e3a5c9a0c3a754345a70c15b82')
 
 package() {
   cd $_dirname
